maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: not enough arguments for method setX: (i: Int)Unit.
Unspecified value parameter i.
  while(setX()!=monde.largeur()-1){
            ^Escaper:3: error: not found: value monde
  while(setX()!=monde.largeur()-1){
                ^