maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while(setX()!=monde.largeur()-1){
      if(!estFaceMur()){
        avance()
      }else{
        droite()
      }
    }
  while(!estSurBiscuit()){
    KeepHandOnSideWall()
  }
  prendBiscuit()  
}

def KeepHandOnSideWall(){
  if (!estFaceMur()){
    avance()
    gauche()
  } else{
    droite()
  }
}